[gd_scene load_steps=10 format=3 uid="uid://wvul13jbpano"]

[ext_resource type="Script" uid="uid://b5uc8qulb3o2d" path="res://Scripts/main_menu.gd" id="1_ur25d"]
[ext_resource type="Texture2D" uid="uid://cxhnrd0qiw08" path="res://Textures/Yellow.png" id="2_0126h"]
[ext_resource type="Texture2D" uid="uid://bj51foc8nnwnx" path="res://Textures/Background.png" id="2_eotax"]
[ext_resource type="Texture2D" uid="uid://dhjs3gusd4hmc" path="res://Textures/Autmn Background.png" id="2_mjet1"]
[ext_resource type="Texture2D" uid="uid://dpvcrtundj1nx" path="res://Textures/iFp Jumpers.png" id="3_4lp62"]
[ext_resource type="Texture2D" uid="uid://cr7tr5hec3yid" path="res://Textures/Beach Background.png" id="5_0126h"]
[ext_resource type="Texture2D" uid="uid://blqrb53q07onw" path="res://Textures/Winter Background.png" id="6_4lp62"]
[ext_resource type="AudioStream" uid="uid://c4h0r0oqmtc6c" path="res://Music/Pokemon_Mystery_Dungeon_WiiWare_OST_-_Sparkling_Meadow_(mp3.pm).mp3" id="8_4lp62"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0vewo"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_ur25d")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_0vewo")
offset_right = 1211.0
offset_bottom = 707.0
texture = ExtResource("2_0126h")
stretch_mode = 1

[node name="Game Logo" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 237.0
offset_top = 165.0
offset_right = 912.0
offset_bottom = 292.0
texture = ExtResource("3_4lp62")

[node name="GrassLand" type="Button" parent="."]
texture_filter = 1
offset_left = 137.0
offset_top = 391.0
offset_right = 446.0
offset_bottom = 479.0
theme_override_font_sizes/font_size = 30
text = "        GrassLand"

[node name="TextureRect2" type="TextureRect" parent="GrassLand"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.5
offset_top = -21.0
offset_right = -84.5
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_eotax")
expand_mode = 1

[node name="Autumn Park" type="Button" parent="."]
texture_filter = 1
offset_left = 693.0
offset_top = 391.0
offset_right = 1004.0
offset_bottom = 479.0
theme_override_font_sizes/font_size = 30
text = "        Autumn Park"

[node name="AutmnBackground" type="Sprite2D" parent="Autumn Park"]
position = Vector2(41, 47)
scale = Vector2(0.15842, 0.201923)
texture = ExtResource("2_mjet1")

[node name="Beach Puzzle" type="Button" parent="."]
texture_filter = 1
offset_left = 141.0
offset_top = 541.0
offset_right = 446.0
offset_bottom = 628.0
theme_override_font_sizes/font_size = 30
text = "       Beach Puzzle"

[node name="CompleteStaticBg(288X208)" type="Sprite2D" parent="Beach Puzzle"]
position = Vector2(38.5, 45.5)
scale = Vector2(0.163194, 0.216346)
texture = ExtResource("5_0126h")

[node name="Snowfall Shower" type="Button" parent="."]
texture_filter = 1
offset_left = 694.0
offset_top = 540.0
offset_right = 1003.0
offset_bottom = 627.0
theme_override_font_sizes/font_size = 30
text = "       Snowfall Shower"

[node name="WinterBackground" type="Sprite2D" parent="Snowfall Shower"]
texture_filter = 1
position = Vector2(32, 43)
scale = Vector2(0.159722, 0.225962)
texture = ExtResource("6_4lp62")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_4lp62")
volume_db = 1.514
autoplay = true
parameters/looping = true

[connection signal="pressed" from="GrassLand" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Autumn Park" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Beach Puzzle" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Snowfall Shower" to="." method="_on_snowfall_shower_pressed"]
